WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308046
[YARR] Fix incorrect offset when reading pattern character for Unicode backreference in JIT
https://bugs.webkit.org/show_bug.cgi?id=308046
Summary
[YARR] Fix incorrect offset when reading pattern character for Unicode backre...
Sosuke Suzuki
Reported
2026-02-17 04:21:31 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2026-02-17 04:22:19 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58848
EWS
Comment 2
2026-02-18 15:33:28 PST
Committed
307791@main
(2693828e8d73): <
https://commits.webkit.org/307791@main
> Reviewed commits have been landed. Closing PR #58848 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-02-18 15:34:11 PST
<
rdar://problem/170673556
>
EWS
Comment 4
2026-04-28 16:15:28 PDT
Committed
305413.745@safari-7624-branch
(4925271ab3ab): <
https://commits.webkit.org/305413.745@safari-7624-branch
> Reviewed commits have been landed. Closing PR #5080 and removing active labels.
EWS
Comment 5
2026-05-30 00:02:04 PDT
Committed
305413.695@safari-7624.4-branch
(74bc075ffb0f): <
https://commits.webkit.org/305413.695@safari-7624.4-branch
> Reviewed commits have been landed. Closing PR #5385 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug